feat: registro de pacientes con validaciones, seguridad de contraseña y UI tipo hospital

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -90,6 +90,11 @@
                 <span *ngIf="!loading">Iniciar Sesión</span>
                 <mat-icon *ngIf="!loading">arrow_forward</mat-icon>
             </button>
+            <div style="text-align:center; margin-top:15px;">
+  <span>No tienes cuenta?</span>
+<a routerLink="/login/register">Registrarse</a>
+</div>
+
 
             <!-- Info -->
             <div class="security-info">
